# uva

./: README.md  hello.py  pyproject.toml
app/: app.css  main.py
app/.streamlit/: config.toml
app/components/: charts.py  controls.py  data_loader.py  map.py  metrics.py  tables.py
app/data/: waste_data.py
app/data_cache/: processed_containers.csv
app/routes/: homepage.py  real-data.py
app/utils/: helpers.py
